--- a/_layouts/embed.html
+++ b/_layouts/embed.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         {% include template/head.html %}
+        <style>
+            h3.tl-headline-date { font-size: 150% }
+        </style>
     </head>
     <body>
         {{ content }}
