work on linking tweets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
                     elem.setAttribute('target','_blank');
                     elem.setAttribute('rel','noopener');
                 })
+            $( "a[href^='https://twitter.com']" ).css('border-color', 'red');
         }, 2000);
     </script>
 </html>
