--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,15 +14,34 @@
         {% include template/foot.html %}
     </body>
     <script>
-        setTimeout(function() {
+        setTimeout(function () {
             document.getElementById('timeline-embed')
                 .querySelectorAll('a')
-                .forEach(function(elem) {
-                    elem.setAttribute('target','_blank');
-                    elem.setAttribute('rel','noopener');
+                .forEach(function (elem) {
+                    elem.setAttribute('target', '_blank');
+                    elem.setAttribute('rel', 'noopener');
                 })
-            foo = $( "a[href^='https://twitter.com']" );
-            foo.html("<svg width='17' height='17' viewBox='328 355 335 276' xmlns='http://www.w3.org/2000/svg'>  <path d='    M 630, 425    A 195, 195 0 0 1 331, 600    A 142, 142 0 0 0 428, 570    A  70,  70 0 0 1 370, 523    A  70,  70 0 0 0 401, 521    A  70,  70 0 0 1 344, 455    A  70,  70 0 0 0 372, 460    A  70,  70 0 0 1 354, 370    A 195, 195 0 0 0 495, 442    A  67,  67 0 0 1 611, 380    A 117, 117 0 0 0 654, 363    A  65,  65 0 0 1 623, 401    A 117, 117 0 0 0 662, 390    A  65,  65 0 0 1 630, 425    Z'    style='fill:#3BA9EE;'/></svg>" + foo.html());
+            $("a[href^='https://twitter.com']").each(function (idx) {
+                $(this).html("<svg width='17' height='17' " +
+                    "viewBox='328 355 335 276' " +
+                    "xmlns='http://www.w3.org/2000/svg'>  " +
+                    "<path d='M 630, 425 " +
+                    "A 195, 195 0 0 1 331, 600" +
+                    "A 142, 142 0 0 0 428, 570" +
+                    "A  70,  70 0 0 1 370, 523" +
+                    "A  70,  70 0 0 0 401, 521" +
+                    "A  70,  70 0 0 1 344, 455" +
+                    "A  70,  70 0 0 0 372, 460" +
+                    "A  70,  70 0 0 1 354, 370" +
+                    "A 195, 195 0 0 0 495, 442" +
+                    "A  67,  67 0 0 1 611, 380" +
+                    "A 117, 117 0 0 0 654, 363" +
+                    "A  65,  65 0 0 1 623, 401" +
+                    "A 117, 117 0 0 0 662, 390" +
+                    "A  65,  65 0 0 1 630, 425 Z'    " +
+                    "style='fill:#3BA9EE;'/>" +
+                    "</svg>" + $(this).html());
+            });
         }, 2000);
     </script>
 </html>
