--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         </main>
         {% if page.name contains "test" %}
         <section>
-            <a class="btn btn--gray-border" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Ftimelinez.github.io%2Faerosolized-covid-19{{ page.url }}&via=paul-hammant&text=%20%23covidIsAirborne%20%23masks4All%20%23bewareOfSharedAir%20%23ventilation" target="_blank">Tweet This</a>
+            <a class="btn btn--gray-border" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Ftimelinez.github.io%2Faerosolized-covid-19{{ page.url }}&via=AerosolizedC19&text=%20%23covidIsAirborne%20%23masks4All%20%23bewareOfSharedAir%20%23ventilation" target="_blank">Tweet This</a>
         </section>
         {% endif %}
         {% include template/footer.html %}
