--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
         {% include template/header.html %}
         <main id="maincontent" role="main" aria-label="Content" class="mb-4 flex-shrink-0">
         {{ content }}
-        {% if page.layout == "default" and page.timeline or page.timeline-json %}<div class="my-4"><div id="timeline-embed" style="height: 600px" class="w-100"></div></div>{% endif %}
-        </main>
         {% if page.name contains "test" %}
         <section>
-            <a class="btn btn--gray-border" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Ftimelinez.github.io%2Faerosolized-covid-19{{ page.url }}&via=AerosolizedC19&text=%20%23covidIsAirborne%20%23masks4All%20%23bewareOfSharedAir%20%23ventilation" target="_blank">Tweet This</a>
+            <a class="btn btn--gray-border" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Ftimelinez.github.io%2Faerosolized-covid-19{{ page.url }}&via=AerosolizedC19&text=23covidIsAirborne%20%23masks4All%20%23bewareOfSharedAir%20%23ventilation. See: " target="_blank">Tweet This</a>
         </section>
         {% endif %}
+        {% if page.layout == "default" and page.timeline or page.timeline-json %}<div class="my-4"><div id="timeline-embed" style="height: 600px" class="w-100"></div></div>{% endif %}
+        </main>
         {% include template/footer.html %}
         {% include template/foot.html %}
     </body>
