--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,8 @@
                     "</svg>" + $(this).html());
             });
         }, 2000);
+        $( window ).on( 'hashchange', function( e ) {
+            console.log( $(this).href + 'hash changed ' + window.location.hash);
+        } );
     </script>
 </html>
