add contribute link

--- a/_includes/template/footer.html
+++ b/_includes/template/footer.html
@@ -1,5 +1,8 @@
 <footer class="mt-auto border-top bg-light">
+
+
+
     <div class="container my-4 ">
-        <p><a href="{{ '/' | relative_url }}">{{ site.title }}</a> | {{ site.description }}  - by various people from many countries</p>
+        <p><a href="{{ '/' | relative_url }}">{{ site.title }}</a> | {{ site.description }}  - by various people from many countries. <a href="https://github.com/its-airborne/timelines-site">Contribute!</a></p>
     </div>
 </footer>
