attempt at slideshow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,15 @@
                     "</svg>" + $(this).html());
             });
         }, 2000);
+        $("#slideshow > div:gt(0)").hide();
+
+        setInterval(function() {
+            $('#slideshow > div:first')
+                .fadeOut(1000)
+                .next()
+                .fadeIn(1000)
+                .end()
+                .appendTo('#slideshow');
+        },  3000);
     </script>
 </html>
