attempt at slideshow

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,10 @@
 
         setInterval(function() {
             $('#slideshow > div:first')
-                .fadeOut(3000)
+                .fadeOut(2000)
                 .next()
-                .fadeIn(3000)
+                .delay(5000)
+                .fadeIn(2000)
                 .end()
                 .appendTo('#slideshow');
         },  3000);
