navigate between languages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,48 +18,70 @@
         if (window.location.href.indexOf("/fr/") > -1) {
             $("#navbarContent").each(function (idx) {
                 $(this).html("<ul class=\"navbar-nav mr-auto\">\n" +
-                    "                                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/fr/\">Accueil</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/fr/covid19-chronologie.html\">COVID-19 et aérosols</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/fr/chronologie-historique.html\">Maladies et antécédents d'aérosols</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/fr/premiers-pays-masqués.html\">Pays de masquage précoce</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "            </ul>");
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/\">Accueil</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/covid19-chronologie.html\">COVID-19 et aérosols</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/chronologie-historique.html\">Maladies et antécédents d'aérosols</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/premiers-pays-masqués.html\">Pays de masquage précoce</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Flag_of_Spain.svg/23px-Flag_of_Spain.svg.png'>\n" +
+                    "  </a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/23px-Flag_of_the_United_Kingdom.svg.png'>" +
+                    "  </a>\n" +
+                    "</li>\n" +
+                    "</ul>");
             })
-        }
-
-        if (window.location.href.indexOf("/es/") > -1) {
+        } else if (window.location.href.indexOf("/es/") > -1) {
             $("#navbarContent").each(function (idx) {
                 $(this).html("<ul class=\"navbar-nav mr-auto\">\n" +
-                    "                                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/es/\">Casa</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/es/línea-de-tiempo-covid19.html\">COVID-19 y aerosoles</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/es/cronología-histórica.html\">Enfermedades e historia de aerosoles</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "                <li class=\"nav-item\">\n" +
-                    "                <a class=\"nav-link\" href=\"/es/primeros-países-de-enmascaramiento.html\">Países de enmascaramiento temprano</a>\n" +
-                    "                </li>\n" +
-                    "                \n" +
-                    "            </ul>");
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/\">Casa</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/línea-de-tiempo-covid19.html\">COVID-19 y aerosoles</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/cronología-histórica.html\">Enfermedades e historia de aerosoles</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/primeros-países-de-enmascaramiento.html\">Países de enmascaramiento temprano</a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/23px-Flag_of_France.svg.png'>\n" +
+                    "  </a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/23px-Flag_of_the_United_Kingdom.svg.png'>" +
+                    "  </a>\n" +
+                    "</li>\n" +
+                    "</ul>");
+            })
+        } else {
+            $("#navbarContent ul").each(function (idx) {
+                $(this).append(
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/fr/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/23px-Flag_of_France.svg.png'>\n" +
+                    "  </a>\n" +
+                    "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/\">\n" +
+                    "    <img src='https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Flag_of_Spain.svg/23px-Flag_of_Spain.svg.png'>\n" +
+                    "  </a>\n" +
+                    "</li>\n");
             })
         }
 
