--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
                     elem.setAttribute('rel', 'noopener');
                 })
             $("a[href^='https://twitter.com']").each(function (idx) {
-                $(this).html("<span><svg width='17' height='17' " +
+                $(this).html("<span><svg width='100%' height='auto' " +
                     "viewBox='328 355 335 276' " +
                     "xmlns='http://www.w3.org/2000/svg'>  " +
                     "<path d='M 630, 425 " +
@@ -119,7 +119,7 @@
                 $(this).css("border","2px solid white")
             });
 
-        }, 2000);
+        }, 1000);
 
         $("#slideshow > div:gt(0)").hide();
         setInterval(function() {
