--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
         }
 
         setTimeout(function () {
-            $("h1").html($("h1").text().replace("Better Masks", "<a href=\"https://twitter.com/search?q=%23Bettermasks\">#BetterMasks</a>"));
+            $("h1").html($("h1").text().replace("Better Masks", "<a href=\"https://twitter.com/search?q=%23BetterMasks\">#BetterMasks</a>"));
             document.getElementById('timeline-embed')
                 .querySelectorAll('a')
                 .forEach(function (elem) {
