spanish translation of letters

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,9 @@
                     "<li class=\"nav-item\">\n" +
                     "  <a class=\"nav-link\" href=\"/es/primeros-países-de-enmascaramiento.html\">Países de enmascaramiento temprano</a>\n" +
                     "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/es/letras.html\">Letras para una mejor ventilación y EPI</a>\n" +
+                    "</li>\n" +
                     frNav +
                     ukNav +
                     "</ul>");
