--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,13 +112,13 @@
             $("#navbarContent").each(function (idx) {
                 $(this).html("<ul class=\"navbar-nav mr-auto\">\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/\">Casa</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/\">Home</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/covid-19-tidslinje-för-aerosol.html\">COVID-19 Is Airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/covid-19-timeline.html\">COVID-19 Is Airborne</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/aerosolhistoria.html\">Other diseases are airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/history-timeline.html\">Other diseases are airborne</a>\n" +
                     "</li>\n" +
                     frNav +
                     ukNav +
