start of Thai effort

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,10 +115,10 @@
                     "  <a class=\"nav-link\" href=\"/th/\">Home</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/covid-19-timeline.html\">COVID-19 Is Airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/covid19-timeline.html\">COVID-19 Is Airborne</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/history-timeline.html\">Other diseases are airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/historical-timeline.html\">Other diseases are airborne</a>\n" +
                     "</li>\n" +
                     frNav +
                     ukNav +
