--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,16 +112,16 @@
             $("#navbarContent").each(function (idx) {
                 $(this).html("<ul class=\"navbar-nav mr-auto\">\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/\">Home</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/\">บ้าน</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/covid19-timeline.html\">COVID-19 Is Airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/covid19-timeline.html\">รายชื่อสเปรย์โควิด-19</a>\n" +
                     "</li>\n" +
                     "<li class=\"nav-item\">\n" +
-                    "  <a class=\"nav-link\" href=\"/th/historical-timeline.html\">Other diseases are airborne</a>\n" +
+                    "  <a class=\"nav-link\" href=\"/th/historical-timeline.html\">เส้นเวลาทางประวัติศาสตร์ของโรคติดเชื้อในละอองลอย</a>\n" +
                     "</li>\n" +
-                    frNav +
                     ukNav +
+                    frNav +
                     esNav +
                     seNav +
                     "</ul>");
