--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,6 +120,9 @@
                     "<li class=\"nav-item\">\n" +
                     "  <a class=\"nav-link\" href=\"/th/historical-timeline.html\">เส้นเวลาทางประวัติศาสตร์ของโรคติดเชื้อในละอองลอย</a>\n" +
                     "</li>\n" +
+                    "<li class=\"nav-item\">\n" +
+                    "  <a class=\"nav-link\" href=\"/th/masks-2021.html\">มาสก์ที่ดีกว่าในปี 2021</a>\n" +
+                    "</li>\n" +
                     ukNav +
                     frNav +
                     esNav +
